--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
+<% provide(:title, 'Home') %>
+<div class="center jumbotron">
+  <h1>Welcome to Framgia E-Learning System</h1>
 
-  <div class="center jumbotron">
-    <h1>Welcome to Framgia E-Learning System</h1>
+  <h2>
+    This is the home page for the
+    <a href="#">Framgia E-Learning System.</a>
+  </h2>
 
-    <h2>
-      This is the home page for the
-      <a href="#">Framgia E-Learning System.</a>
-    </h2>
-
-    <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
-  </div>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
