--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-
+<%provide(:title,'Home')%>
   <div class="center jumbotron">
     <h1>Welcome to Framgia E-Learning System</h1>
 
@@ -7,5 +7,5 @@
       <a href="#">Framgia E-Learning System.</a>
     </h2>
 
-    <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
