--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,24 @@
-<%provide(:title,'Home')%>
-  <div class="center jumbotron">
-    <h1>Welcome to Framgia E-Learning System</h1>
-
-    <h2>
-      This is the home page for the
-      <a href="#">Framgia E-Learning System.</a>
-    </h2>
-
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+<% provide(:title, 'Home') %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+    </aside>
   </div>
+<% else %>
+
+<div class="center jumbotron">
+  <h1>Welcome to Framgia E-learning system</h1>
+  <h2>
+    This is the home page for the
+    <a href=#>Framgia E-learning system</a>
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+ <% end %>
