--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,8 @@
 <div class="row">
   <aside class="col-md-4">
     <section>
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
+      <h1> <%= image_tag @user.avatar.url :medium %>
+      <%= @user.name %> </h1>
     </section>
     <section class="stats">
       <%= render "shared/stats" %>
