--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <title><%= full_title(yield(:title)) %></title>
-    <%= stylesheet_link_tag 'admin', media: 'all',
-    'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'admin/admin', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag "http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" %>
     <%= csrf_meta_tags %>
     <%= render "layouts/shim" %>
   </head>
@@ -42,6 +41,6 @@
       </div>
       <%= render "layouts/admin/footer"%>
     </div>
-
+    <%= javascript_include_tag 'admin/admin', 'data-turbolinks-track' => true %>
   </body>
 </html>
