--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,7 +53,13 @@ h2 {
   font-weight: normal;
   color: #777;
 }
-
+h3 {
+  font-size: 1.3em;
+  letter-spacing: -1px;
+  margin-bottom:-7px;
+  font-weight: normal;
+  color: #000;
+}
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -283,4 +289,19 @@ span.picture {
   input {
     border: 0;
   }
+}
+.wordlist{
+  margin-left: 350px;
+  margin-bottom: 30px;
+  input {
+  width:auto !important;
+  margin-left: 50px;
+  }
+  label{
+    margin-left: 20px;
+  } 
+}
+.button{
+  margin-top:20px;
+  padding-left:120px;
 }
