--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,16 +9,22 @@
         <%= render 'shared/stats' %>
       </section>
     </aside>
+  
+    <div class="col-md-8">
+      <%= link_to "Words", word_list_path, class: "btn btn-lg btn-primary" %>
+      <%= link_to "Lession", '#', class: "btn btn-lg btn-primary" %>
+      <h3> Activities</h3>
+      <hr width=750>
+      <section class="activites">
+        <%= render 'shared/activites' %>
+      </section>
+    </div>
   </div>
 <% else %>
-
-<div class="center jumbotron">
-  <h1>Welcome to Framgia E-learning system</h1>
-  <h2>
-    This is the home page for the
-    <a href=#>Framgia E-learning system</a>
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
- <% end %>
+  <div class="center jumbotron">
+    <h1>Welcome to Framgia E-learning system</h1>
+    <h2> This is the home page for the <a href=#>Framgia E-learning system</a></h2>
+  
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
