--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -301,7 +301,20 @@ span.picture {
     margin-left: 20px;
   } 
 }
-.button{
+.button {
+  margin-top: 20px;
+  padding-left: 120px;
+}
+.start {
   margin-top:20px;
-  padding-left:120px;
+  float:right;
+}
+.cate {
+  margin-top: 30px;
+  p {
+    height: 100px;
+    width: 100%;
+    overflow-y: auto;
+    float:left;
+  }
 }
