--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
   
     <div class="col-md-8">
       <%= link_to "Words", word_list_path, class: "btn btn-lg btn-primary" %>
-      <%= link_to "Lession", '#', class: "btn btn-lg btn-primary" %>
+      <%= link_to "Lession", categories_path, class: "btn btn-lg btn-primary" %>
       <h3> Activities</h3>
       <hr width=750>
       <section class="activites">
