admin panel: add wordlist manager

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,7 +5,7 @@
         <h3 class="box-title">List all users</h3>
       </div><!-- /.box-header -->
       <div class="box-body">
-        <table id="categories" class="table table-bordered table-striped">
+        <table id="data-table" class="table table-bordered table-striped">
           <thead>
             <tr>
               <th>Avatar</th>
