--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,7 +13,7 @@
             text.text text.text text.text texttext.text text.text text.text texttext.text text.text text.text texttext.text text.text text.text texttext.text text.text text.text texttext.text text.text text.text text
           </p>
           <div>
-            <%= link_to "Start",' #', class: "btn btn-primary start" %>
+            <%= link_to "Start", user_category_lessons_path(current_user.id, f.id) , class: "btn btn-primary start" %>
           </div>
         </div>
       </div>
