--- a/app/views/word_list/_wordlist.html.erb
+++ b/app/views/word_list/_wordlist.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <% @category.words.each do |word| %>
+  <% @wordlist.each do |word| %>
     <div class="col-md-6">
       <div class="col-md-6 ">
         <%= word.word %>
