--- a/app/views/result/index.html.erb
+++ b/app/views/result/index.html.erb
@@ -5,32 +5,30 @@
       <h4>Basic500 Result</h4>
     </div>
     <div class = "col-md-6">
-      <h4> 3/20</h4>
+      <h4> <%= @score %>/20</h4>
     </div>
   </div>
-<% @lesson_words.each do |lesson_word| %>
-<% true_answer = Answer.find_by(word_id: lesson_word.word_id, correct: true) %>
-<% jp = Word.find_by(id: lesson_word.word_id).word %>
+<% @results.each do |result| %>
   <div class = "col-md-8 col-md-offset-2">
     </br>
     <div class = "col-md-6">
       <div class = "col-md-6">
-        <% if true_answer.id == lesson_word.answer_id %>
+        <% if result[3] %>
           <span class="glyphicon glyphicon-ok"></span>
         <% else %>
           <span class="glyphicon glyphicon-remove"></span>
         <% end %>
       </div>
       <div class = "col-md-6">
-        <%= jp %>
+        <%= result[0] %>
       </div>
     </div>
     <div class = "col-md-6">
       <div class = "col-md-6">
-       <%=  true_answer.answer %>
+       <%=  result[1] %>
       </div>
       <div class = "col-md-6">
-        <%= link_to '<span class="glyphicon glyphicon-bullhorn"></span> Speak'.html_safe, speak_path(word: jp), class: 'btn btn-primary btn-sm' %>
+        <%= link_to '<span class="glyphicon glyphicon-bullhorn"></span> Speak'.html_safe, speak_path(word: result[0]), class: 'btn btn-primary btn-sm' %>
       </div>
     </div>
   </div>
